--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <div class="Top-bar">
             <div class="Logo-div">
-                <img class="Logo-img" src="../Iqoo/Images/Logo-White.png" alt="">
+                <img class="Logo-img" src="./Images/Logo-White.png" alt="">
             </div>
 
             <div class="Top-Options">
