--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                                     <!-- FOR MIDDLE PART -->
 
 
-           <img class="Cover-img" src="../Iqoo/Images/Cover.jpg" alt="">   
+           <img class="Cover-img" src="./Images/Cover.jpg" alt="">   
            
            <div class="Container">
             <div class="Img-1-div">
