--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="Top-Icon">
-                <img class="Contact-Icon" src="../Iqoo/Images/Contact-icon.png" alt="">
+                <img class="Contact-Icon" src="./Images/Contact-icon.png" alt="">
             </div>
             </div>
 
@@ -58,16 +58,16 @@
            
            <div class="Container">
             <div class="Img-1-div">
-               <img class="Images" src="../Iqoo/Images/1.png" alt="">
+               <img class="Images" src="./Images/Images/1.png" alt="">
             </div>
             <div class="Img-2-div">
-                <img class="Images" src="../Iqoo/Images/2.png" alt="">
+                <img class="Images" src="./Images/2.png" alt="">
             </div>
             <div class="Img-3-div">
-                <img class="Images" src="../Iqoo/Images/3.png" alt="">
+                <img class="Images" src="./Images/3.png" alt="">
             </div>
             <div class="Img-4-div">
-                <img class="Images" src="../Iqoo/Images/4.png" alt="">
+                <img class="Images" src="./Images/4.png" alt="">
             </div>
 
            </div>
@@ -116,16 +116,16 @@
                     <li class="Content-2">Follow us</li>
                    </ul>
 
-                   <img class="Phone-icon" src="../Iqoo/Images/phone-icon.jpg" alt="">
-                   <img class="Email-icon" src="../Iqoo/Images/email-icon.jpg" alt="">
+                   <img class="Phone-icon" src="./Images/phone-icon.jpg" alt="">
+                   <img class="Email-icon" src="./Images/email-icon.jpg" alt="">
                   </div>                                       
 
 
 
-                <img class="Fb" src="../Iqoo/Images/fb.png" alt="">
-                <img class="Insta" src="../Iqoo/Images/insta.png" alt="">
-                <img class="yt" src="../Iqoo/Images/yt.png" alt="">
-                <img class="Twitter" src="../Iqoo/Images/Twitter.png" alt="">
+                <img class="Fb" src="./Images/fb.png" alt="">
+                <img class="Insta" src="./Images/insta.png" alt="">
+                <img class="yt" src="./Images/yt.png" alt="">
+                <img class="Twitter" src="./Images/Twitter.png" alt="">
 
                 <hr>
 
