--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
            
            <div class="Container">
             <div class="Img-1-div">
-               <img class="Images" src="./Images/Images/1.png" alt="">
+               <img class="Images" src="./Images/1.png" alt="">
             </div>
             <div class="Img-2-div">
                 <img class="Images" src="./Images/2.png" alt="">
